# liblpvc

./: CMakeLists.txt  LICENSE  README.md
cmake/: config.cmake.in  version.cpp.in
docs/: video001.avi  video002.avi
include/lpvc/: lpvc.h
include/lpvc/detail/: lpvc_impl.h  serialization.h  variant_utils.h  zstd_wrapper.h
src/: lpvc.cpp
test/: CMakeLists.txt  test.cpp
